--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -22,7 +22,9 @@
     "@vitejs/plugin-vue": "^4.3.4",
     "contracts": "workspace:*",
     "eslint-plugin-vue": "^9.17.0",
+    "pinia": "^2.1.6",
     "rxjs": "7.5.5",
+    "sass": "^1.67.0",
     "viem": "1.6.0",
     "vue": "^3.3.4"
   },
